--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -8,4 +8,16 @@ editor_options:
   chunk_output_type: console
 ---
 
-Welcome to my research website.
+
+* [Data analysis 1](lab1.html)
+* [Data analysis 1](lab2.html)
+* [Data analysis 1](lab3.html)
+
+```{r}
+library(ISLR2)
+library(GGally)
+
+ggpairs(College[,2:6])
+
+```
+
